@@ -53,6 +53,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #11830: Remove unnecessary introspection code in the decimal module.                                                                
+
 - Issue #11703 - urllib2.geturl() does not return correct url when the original
   url contains #fragment.
   
